--- a/content/_index.html
+++ b/content/_index.html
@@ -7,7 +7,7 @@ title="Barrel Organ Discovery"
 <div class="back bo-title">
     <div class="bo-container">
           <div class="left-logo">
-              <img src="/img/main/logo.png" width="150">
+              <img src="{{< baseurl >}}img/main/logo.png" width="150">
           </div>
           <div class="title" style="flex-direction: column;">
               <div style="color:#f8f8f8;font-size:50px;">Barrel Organ Discovery
@@ -26,7 +26,7 @@ Téléchargement du logiciel APrint Studio :
 <!-- banner -->
 Liens rapides sur le contenu du site : 
 <br/>
-<a href="/articles/">Accès aux articles sur l'utilisation du logiciel</a>
+<a href="{{< baseurl >}}articles/">Accès aux articles sur l'utilisation du logiciel</a>
 <br/>
 
 <a href="http://www.barrel-organ-discovery.org/site/doc/2020/">Documentation du logiciel APrint Studio</a>
@@ -35,6 +35,6 @@ Liens rapides sur le contenu du site :
 
 à propos de Barrel Organ Discovery :
 <br/>
-<a href="/about/">à propos de Barrel Organ Discovery</a>
+<a href="{{< baseurl >}}about/">à propos de Barrel Organ Discovery</a>
 <br/>
 
