ajdust presentation content

--- a/content/_index.html
+++ b/content/_index.html
@@ -19,6 +19,9 @@ title="Barrel Organ Discovery"
 </div>
 
 <br/>
+{{% admonition "info" "Note pour les visiteurs" %}}
+Ce site est en cours de construction, il faut peau neuve, pour ses 20 ans d'existence.
+{{% /admonition %}}
 
 Téléchargement du logiciel APrint Studio :
 <a href="https://github.com/barrelorgandiscovery/aprintproject/releases">Dernières versions d'APrint Studio</a><br/>
