--- a/content/_index.html
+++ b/content/_index.html
@@ -23,6 +23,9 @@ title="Barrel Organ Discovery"
 Ce site est en cours de construction, il faut peau neuve, pour ses 20 ans d'existence.
 {{% /admonition %}}
 
+
+Le logiciel APrint Studio est disponible sur ce site, si vous ne connaissez pas, <a href="{{< baseurl >}}presentation/">Vous pouvez consulter la présentation rapide </a>
+<br/>
 Téléchargement du logiciel APrint Studio :
 <a href="https://github.com/barrelorgandiscovery/aprintproject/releases">Dernières versions d'APrint Studio</a><br/>
 <br/>
